--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
   "dependencies": {
     "@mozilla/readability": "^0.3.0",
     "axios": "^0.19.2",
+    "cron": "^1.8.2",
+    "dotenv": "^8.2.0",
     "jsdom": "^16.4.0"
+  },
+  "devDependencies": {
+    "@types/node": "^14.6.2"
   }
 }
