--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy:function": "gcloud functions deploy processUnsorted --env-vars-file .env.yaml --runtime nodejs10 --trigger-http --allow-unauthenticated"
   },
   "author": "th1nkful",
   "license": "MIT",
   "dependencies": {
     "@mozilla/readability": "^0.3.0",
     "axios": "^0.19.2",
-    "cron": "^1.8.2",
     "dotenv": "^8.2.0",
     "jsdom": "^16.4.0"
   },
