--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "ytdl-core": "^3.2.2"
   },
   "devDependencies": {
-    "@types/node": "^14.6.2"
+    "@types/node": "^14.6.2",
+    "eslint": "^7.2.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "jest": "^26.6.3"
   }
 }
