--- a/package.json
+++ b/package.json
@@ -15,13 +15,18 @@
     "jsdom": "^16.4.0",
     "p-all": "^3.0.0",
     "p-map": "^4.0.0",
-    "ytdl-core": "^3.2.2"
+    "ytdl-core": "^4.4.0"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.19",
     "@types/node": "^14.6.2",
     "eslint": "^7.2.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.1.3",
     "jest": "^26.6.3"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
